--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <p>Roses are red,<br>
         Violets are blue,<br>
         I feel so lucky,<br>
-        To have a friend like you!</p>
+        To have a Partner like you!</p>
         <p class="signature">Your Love,<br>[Shekhar]</p>
     </div>
 </body>
